# nfl-dl

./: .gitignore  pyproject.toml
nfl_dl/data/: loaders.py  pbp_loader.py
nfl_dl/utils/: io.py  normalize.py
